Add more dispatch functionality

--- a/tox.ini
+++ b/tox.ini
@@ -41,7 +41,9 @@ whitelist_externals =
 commands =
     pytest --doctest-modules \
         src/pybel/struct/summary \
-        src/pybel/struct/filters src/pybel/struct/mutation
+        src/pybel/struct/filters \
+        src/pybel/struct/mutation \
+        src/pybel/struct/graph.py
 deps =
     pytest
 
