Add flake8 check to new tests

--- a/tox.ini
+++ b/tox.ini
@@ -70,6 +70,7 @@ deps =
     pydocstyle
 commands =
     flake8 src/pybel/ setup.py
+    flake8 tests/test_schema.py
 description = Run the flake8 tool with several plugins (bandit, docstrings, import order, pep8 naming).
 
 [testenv:xenon]
