--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,7 @@ keywords =
 [options]
 install_requires =
     dataclasses; python_version < "3.7"
+    pickle5; python_version < "3.8"
     networkx>=2.4
     sqlalchemy
     click
