Add gzip pickle I/O

--- a/setup.cfg
+++ b/setup.cfg
@@ -115,6 +115,9 @@ pybel.importer =
     bel.pickle            = pybel.io.gpickle:from_pickle
     bel.gpickle           = pybel.io.gpickle:from_pickle
     bel.pkl               = pybel.io.gpickle:from_pickle
+    bel.pickle.gz         = pybel.io.gpickle:from_pickle_gz
+    bel.gpickle.gz        = pybel.io.gpickle:from_pickle_gz
+    bel.pkl.gz            = pybel.io.gpickle:from_pickle_gz
     indra.json            = pybel.io.indra:from_indra_statements_json_file
 
 pybel.exporter =
@@ -133,6 +136,9 @@ pybel.exporter =
     bel.pickle            = pybel.io.gpickle:to_pickle
     bel.gpickle           = pybel.io.gpickle:to_pickle
     bel.pkl               = pybel.io.gpickle:to_pickle
+    bel.pickle.gz         = pybel.io.gpickle:to_pickle_gz
+    bel.gpickle.gz        = pybel.io.gpickle:to_pickle_gz
+    bel.pkl.gz            = pybel.io.gpickle:to_pickle_gz
     indra.json            = pybel.io.indra:to_indra_statements_json_file
     # No re-import
     bel.unodelink.json    = pybel.io.umbrella_nodelink:to_umbrella_nodelink_file
