Add flake8 check to tests

--- a/tox.ini
+++ b/tox.ini
@@ -71,6 +71,7 @@ deps =
 commands =
     flake8 src/pybel/ setup.py
     flake8 tests/test_schema.py
+    flake8 tests/test_io/test_mongodb.py
 description = Run the flake8 tool with several plugins (bandit, docstrings, import order, pep8 naming).
 
 [testenv:xenon]
