More test improvements
Still not done though

--- a/tox.ini
+++ b/tox.ini
@@ -69,8 +69,9 @@ deps =
     pep8-naming
     pydocstyle
 commands =
-    flake8 src/pybel/ setup.py
-    flake8 tests/test_schema.py
+    flake8 src/pybel/ setup.py \
+        tests/test_schema.py \
+        tests/test_grounding.py
 description = Run the flake8 tool with several plugins (bandit, docstrings, import order, pep8 naming).
 
 [testenv:xenon]
