Force pass on python 39

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,6 @@ python: '3.8'
 jobs:
   allow_failures:
     - env: TOXENV=mypy
-    - python: 3.9
-      env: TOXENV=py DB=sqlite
   include:
     # lint stage
     - stage: lint
@@ -47,7 +45,7 @@ jobs:
     - name: "Tests with SQLite / legacy Python (3.6)"
       python: 3.6
       env: TOXENV=py DB=sqlite
-    - name: "Tests with SQLite / preview Python (3.9-dev)"
+    - name: "Tests with SQLite / Python (3.9)"
       python: 3.9
       env: TOXENV=py DB=sqlite
 
