--- a/.travis.yml
+++ b/.travis.yml
@@ -42,8 +42,11 @@ jobs:
       env: TOXENV=py DB=postgresql PYBEL_TEST_CONNECTOR=psycopg2-binary PYBEL_TEST_CONNECTION=postgresql+psycopg2://travis@localhost/tests
     - name: "Tests with SQLite"
       env: TOXENV=py DB=sqlite
-    - name: "Tests with legacy Python (3.6)"
+    - name: "Tests with SQLite / legacy Python (3.6)"
       python: 3.6
+      env: TOXENV=py DB=sqlite
+    - name: "Tests with SQLite / Python (3.9)"
+      python: 3.9
       env: TOXENV=py DB=sqlite
 
 install:
