--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ envlist =
 commands =
     {[testenv:doctests]commands}
     coverage run -p -m pytest --durations=20 {posargs:tests}
-passenv = PYBEL_TEST_CONNECTOR PYBEL_TEST_CONNECTION TRAVIS CI DB
+passenv = PYBEL_TEST_CONNECTOR PYBEL_TEST_CONNECTION TRAVIS CI DB HOME
 deps =
     coverage
     pytest
@@ -171,3 +171,4 @@ commands =
     {[testenv:release]commands}
     git push
     bumpversion patch
+    git push
