--- a/.github/workflows/cq.yml
+++ b/.github/workflows/cq.yml
@@ -22,7 +22,7 @@ jobs:
         run: tox -e flake8
       - name: Check package metadata with Pyroma
         run: tox -e pyroma
-      - name: Check static typing with MyPy
-        run: tox -e mypy
-        # Allow failure, see https://github.community/t/continue-on-error-allow-failure-ui-indication/16773
-        if: succeeded() || failed()
+      # - name: Check static typing with MyPy
+      #  run: tox -e mypy
+      #  # Allow failure, see https://github.community/t/continue-on-error-allow-failure-ui-indication/16773
+      #  if: succeeded() || failed()
