Update prefix checking

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,7 +67,8 @@ install_requires =
     tabulate
     pandas
     jsonschema
-    pyobo>=0.2.12
+    pyobo>=0.3.0
+    bioregistry
     ratelimit
     pystow
 
