--- a/tox.ini
+++ b/tox.ini
@@ -63,7 +63,7 @@ deps =
     flake8
     flake8-bandit
     flake8-colors
-    flake8-docstrings
+    flake8-docstrings<1.6
     flake8-import-order
     flake8-bugbear
     pep8-naming
