Use PyStow for config loading

--- a/setup.cfg
+++ b/setup.cfg
@@ -70,7 +70,7 @@ install_requires =
     pyobo>=0.3.0
     bioregistry
     ratelimit
-    pystow
+    pystow>=0.1.2
 
 # Random options
 zip_safe = false
