Fix out of date dependencies (#491)
* Use PyStow for config loading

* Update setup.cfg

* Fix py2neo docs

* Better mocks

* Update test_grounding.py

* Update mocks

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,10 +67,10 @@ install_requires =
     tabulate
     pandas
     jsonschema
-    pyobo>=0.3.0
+    pyobo>=0.4.0
     bioregistry
     ratelimit
-    pystow
+    pystow>=0.1.2
 
 # Random options
 zip_safe = false
