Make sure finish command works

--- a/tox.ini
+++ b/tox.ini
@@ -162,8 +162,8 @@ commands =
 
 [testenv:finish]
 skip_install = true
+passenv = HOME
 deps =
-    {[testenv:build]deps}
     {[testenv:release]deps}
     bumpversion
 commands =
@@ -172,3 +172,5 @@ commands =
     git push
     bumpversion patch
     git push
+whitelist_externals =
+    /usr/bin/git
