--- a/setup.cfg
+++ b/setup.cfg
@@ -67,8 +67,8 @@ install_requires =
     tabulate
     pandas
     jsonschema
-    pyobo>=0.4.0
-    bioregistry
+    pyobo>=0.5.0
+    bioregistry>=0.2.3
     ratelimit
     pystow>=0.1.2
     psycopg2-binary
