Make grounding dependencies optional

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,8 +67,7 @@ install_requires =
     tabulate
     pandas
     jsonschema
-    pyobo>=0.5.0
-    bioregistry>=0.2.3
+    bioregistry
     ratelimit
     pystow>=0.1.2
     psycopg2-binary
@@ -94,6 +93,9 @@ jupyter =
     ipython
 neo4j =
     py2neo
+grounding =
+    pyobo
+    protmapper
 docs =
     sphinx
     sphinx-rtd-theme
