--- a/tox.ini
+++ b/tox.ini
@@ -24,13 +24,14 @@ envlist =
 commands =
     {[testenv:doctests]commands}
     coverage run -p -m pytest --durations=20 {posargs:tests}
-passenv = PYBEL_TEST_CONNECTOR PYBEL_TEST_CONNECTION TRAVIS CI DB HOME
+passenv = PYBEL_TEST_CONNECTOR PYBEL_TEST_CONNECTION HOME
 deps =
     coverage
     pytest
     {env:PYBEL_TEST_CONNECTOR:}
 extras =
     jupyter
+    grounding
 whitelist_externals =
     /bin/cat
     /bin/cp
