Add black to tox

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ envlist =
     # always keep coverage-clean first
     coverage-clean
     # code linters/stylers
+    lint
     manifest
     pyroma
     flake8
