--- a/tox.ini
+++ b/tox.ini
@@ -167,6 +167,7 @@ commands =
     python -m build --sdist --wheel --no-isolation
 
 [testenv:release]
+description = Release the code to PyPI so users can pip install it
 skip_install = true
 deps =
     {[testenv:build]deps}
@@ -175,17 +176,30 @@ commands =
     {[testenv:build]commands}
     twine upload --skip-existing dist/*
 
+[testenv:release-test]
+description = Release the code to the test PyPI site
+skip_install = true
+deps =
+    {[testenv:build]deps}
+    twine >= 1.5.0
+commands =
+    {[testenv:build]commands}
+    twine upload --skip-existing --repository-url https://test.pypi.org/simple/ dist/*
+
 [testenv:finish]
 skip_install = true
-passenv = HOME
+passenv =
+    HOME
+    TWINE_USERNAME
+    TWINE_PASSWORD
 deps =
     {[testenv:release]deps}
-    bumpversion
+    bump2version
 commands =
-    bumpversion release
+    bump2version release --tag
     {[testenv:release]commands}
-    git push
-    bumpversion patch
+    git push --tags
+    bump2version patch
     git push
 whitelist_externals =
     /usr/bin/git
