--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -14,7 +14,7 @@ include docs/Makefile
 global-exclude *.py[cod] __pycache__ *.so *.dylib .DS_Store *.gpickle
 
 exclude .bumpversion.cfg
-exclude .readthedocs.yml
+exclude .readthedocs.yaml
 exclude .flake8
 exclude tox.ini
 exclude CONTRIBUTING.md CHANGELOG.rst AUTHORS.rst
